--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -1,3 +1,3 @@
 FROM mysql:5.7
 
-ADD ./dump.sql /docker-entrypoint-initdb.d/sintj278_accounts.sql
+ADD ./dump.sql /docker-entrypoint-initdb.d/dump.sql
