--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "illuminate/database": "^5.8",
         "monolog/monolog": "^1.24",
         "respect/validation": "^1.1",
-        "davidepastore/slim-validation": "^0.5.1"
+        "davidepastore/slim-validation": "^0.5.1",
+        "tuupola/slim-basic-auth": "^3.2",
+        "firebase/php-jwt": "^5.0"
     },
     "autoload": {
         "psr-4": {
